--- a/packages/teleport/data_stream/audit/manifest.yml
+++ b/packages/teleport/data_stream/audit/manifest.yml
@@ -21,7 +21,7 @@ streams:
         description: A list of regular expressions to match the files that you want Filebeat to ignore.
         required: false
         show_user: true
-        default: 
+        default:
           - '\.gz$'
       - name: custom
         type: yaml
@@ -29,7 +29,7 @@ streams:
         required: false
         show_user: false
         description: >-
-            Configuration options that can be used to further change input configuration. Check the [Filebeat documentation](https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-input-filestream.html) for more information.
+          Configuration options that can be used to further change input configuration. Check the [Filebeat documentation](https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-input-filestream.html) for more information.
         default: |-
           #encoding: plain
           prospector.scanner.recursive_glob: true
@@ -84,5 +84,5 @@ streams:
         multi: false
         required: false
         show_user: false
-        description: >
+        description: >-
           Processors are used to reduce the number of fields in the exported event or to enhance the event with metadata. This executes in the agent before the logs are parsed. See [Processors](https://www.elastic.co/guide/en/beats/filebeat/current/filtering-and-enhancing-data.html) for details.
